# SectionCAD

./: .gitignore  README.en.md  README.md  SectionCAD.spec  build_exe.ps1  installer.iss  main.py  pyproject.toml  requirements.txt
calculators/: geometry_prep.py  nomenclature.py  section_properties.py  sp_backend.py  torsion.py  torsion_bem.py  torsion_fdm.py
data/: european_catalog.py
exemples/: 01_rectangle.scad  02_cercle.scad  03_profil_I_avec_conges.scad  04_canal_PFC_250.scad  05_canal_ailes_inclinees.scad  06_profil_Z.scad  07_arc_circulaire.scad  08_trapeze_gousset.scad  09_corniere_sur_platine.scad  10_double_I_fusionne.scad
reports/: fiche_report.py  html_report.py
sections/: parametric.py
tests/: test_calculators.py  test_canvas_grid.py  test_fdm.py  test_fem_vs_analytic.py  test_fiche_report.py  test_sp_backend.py
tools/: generate_examples.py
ui/: calibration_manager.py  canvas.py  coord_dialog.py  fea_worker.py  fiche_dialog.py  left_panel.py  main_window.py  properties_panel.py  report_dialog.py  undo_stack.py
